# cursor-history-links

./: .cursorrules  .gitignore  CHANGELOG.md  LICENSE  README.md  bump_version.py  cursor_tools.py  pyproject.toml  reset_cursor.py  update_cursor_links.py  update_version.py  version-history.json  version_config.json
.cursor/rules/: document.mdc  python.mdc
.github/workflows/: build-artifact.yml  update-cursor-links.yml
scripts/: reset_cursor.sh  run.bat  run.ps1  run.sh
src/: update_cursor_links.py
