[project]
name = "cursor-pro-free"
version = "1.0.0"
description = "Cursor 工具集"
authors = [
    {name = "Eric",email = "bo.liang0212@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "typing-extensions (>=4.12.2,<5.0.0)"
]

[tool.poetry]
name = "cursor-pro-free"
description = "Cursor 工具集"
authors = ["Eric <bo.liang0212@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^6.12.0", python = ">=3.10,<3.14"}
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
